--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": "https://github.com/codenjoyme/codenjoy/tree/snake-new-ui/CodingDojo/games/snake-battle/src/main/javascript",
   "scripts": {
-    "start": "webpack-serve  --config ./webpack.config.js",
+    "start": "nodemon --exec babel-node src/index.js",
     "test": "jest",
     "tdd": "jest --watch"
   },
